--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "method-override": "^3.0.0",
     "mysql": "^2.18.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.3.4"
   },
   "devDependencies": {
     "dotenv": "^8.0.0",
