--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
       "username": "root",
-      "password": "",
+      "password": "happy",
       "database": "walke",
       "host": "localhost",
       "port": 3306,
